# SeetaFaceEngine

FaceAlignment/: CMakeLists.txt  build.sh
FaceAlignment/src/: cfan.cpp
FaceDetection/: CMakeLists.txt
FaceIdentification/: CMakeLists.txt
FaceIdentification/include/: face_identification.h  recognizer.h
FaceIdentification/src/: math_functions.cpp  net.cpp
FaceIdentification/src/test/: CMakeLists.txt  test_face_recognizer.cpp  test_face_verification.cpp
FaceIdentification/tools/: face_identification.cpp
